--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,21 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@theme {
+  --breakpoint-xxs: 20rem; /* 320px */
+  --breakpoint-lxs: 22.5rem; /* 360px */
+  --breakpoint-xs: 35.9375rem; /* 575px */
+  --breakpoint-lsm: 37.5rem; /* 600px */
+  --breakpoint-sm: 40rem; /* 640px */
+  --breakpoint-md: 48rem; /* 768px */
+  --breakpoint-xmd: 50.0625rem; /* 801px */
+  --breakpoint-lg: 64rem; /* 1024px */
+  --breakpoint-xl: 80rem; /* 1280px */
+  --breakpoint-2xl: 96rem; /* 1536px */
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@theme {
+  --font-jakarta: var(--font-jakarta), sans-serif;
+  --font-outfit: var(--font-outfit), sans-serif;
+  --font-sniglet: var(--font-sniglet), cursive;
+  --font-montserrat: var(--font-montserrat), sans-serif;
 }
